# soviet-coffee-machine

./: .gitignore  Makefile  build.zig
.github/workflows/: ci.yml
mojo_project/: hello.mojo
server/: generator.py  local_setup.sh  mojo_setup.sh  test_conda.py  vast_setup.sh
server/cpp/: CMakeLists.txt  main.cpp  setup_cpp_deps.sh
src/: main.zig
www/: index.html  script.js  style.css
